@@ -3,6 +3,8 @@
     package="bullyfox.sangeeth.testube">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
